# imxrt1064-rs-template

./: Cargo.toml  LICENSE.md  README.md  build.rs
.cargo/: config.toml
src/: main.rs
